--- a/views/authentication/failed_signup.erb
+++ b/views/authentication/failed_signup.erb
@@ -1,5 +1,5 @@
- <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+  <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- nav section -->
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -9,7 +9,7 @@
 <body>
 	<style type="text/css">
 	body {
-		padding-top: 10rem;
+		padding-top: 20rem;
 		background-color: #ffffff;
 	}
 
@@ -38,7 +38,7 @@
 	}
 	</style>
 
-	<h1 class="centered" style="color: #66cccc;">Username is already taken.</h1>		
+	<h1 class="text-center text-info" style="color: #66cccc;"><font size="30">Username is already taken.</font></h1>		
 </body>
 <!-- Footer -->
     <footer class="footer text-center">
@@ -63,7 +63,7 @@
         <p class="text-muted small mb-0"><font size="4">Copyright &copy; Your Website 2018</font></p>
       </div>
     </footer>
-
+   
 
 
 
