--- a/views/authentication/invalid_login.erb
+++ b/views/authentication/invalid_login.erb
@@ -5,11 +5,10 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
 <body>
 	<style type="text/css">
 	body {
-		padding-top: 10rem;
+		padding-top: 20rem;
 		background-color: #ffffff;
 	}
 
@@ -33,11 +32,13 @@
 
 	footer {
 	    padding-top: 30rem;
-
 	}
 	</style>
 
-	<h1 class="centered" style="color: #66cccc;">Invalid Username or Password</h1>		
+	<!-- Invalid login -->
+
+	<h1 class="text-center text-info" style="color: #66cccc;">
+		<font size="30">Invalid Username or Password</font></h1>		
 </body>
 
 <!-- Footer -->
