--- a/views/authentication/login.erb
+++ b/views/authentication/login.erb
@@ -8,7 +8,7 @@
 <style type="text/css">
     body {
         padding: 20rem;         
-        background-color: #ffffff;
+        background-color: #000000;
     }
 
     footer.footer .social-link {
