--- a/views/authentication/successful_signup.erb
+++ b/views/authentication/successful_signup.erb
@@ -9,7 +9,7 @@
 <body>
 	<style type="text/css">
 	body {
-		padding-top: 10rem;
+		padding-top: 30rem;
 		background-color: #ffffff;
 	}
 
@@ -32,12 +32,12 @@
     }
 
 	footer {
-    padding-top: 2.5rem;
+    padding-top: 5rem;
 
 	}
 	</style>
 
-	<h1 class="centered" style="color: #66cccc;">Succefully Signed Up!</h1>		
+	<h1 class="text-center text-info" style="color: #66cccc;"><font size="30">Succefully Signed Up!</font></h1>		
 </body>
 
 <!-- Footer -->
