--- a/views/authentication/sign_up.erb
+++ b/views/authentication/sign_up.erb
@@ -7,7 +7,7 @@
 <style type="text/css">
     body{
     padding-top: 20rem;
-    background-color: #ffffff;
+    background-color: #000000;
     } 
 
     footer.footer .social-link {
