--- a/views/navigation.erb
+++ b/views/navigation.erb
@@ -12,19 +12,13 @@
         <a class="nav-link" href="/"><font size="4">Home</font><span class="sr-only">(current)</span></a>
       </li> 
 
-<!-- If cx is logged in but hasn't upgraded, this will apear -->
-      <% if current_user && !current_user.pro %>
+<!-- If cx is logged in, this will apear -->
+      <% if current_user %>
         <li class="nav-item">
           <a class="nav-link" href="/upgrade"><font size="4">Upgrade</font></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout"><font size="4">Logout</font></a>
-        </li>
-
-<!-- If cx has logged in and upgraded, this will appear -->
-      <% elsif current_user && current_user.pro %>
-        <li class="nav-item">
-          <a class="nav-link" href="/plaid"><font size="4">Plaid</font></a>
+          <a class="nav-link" href="/account"><font size="4">Account</font></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout"><font size="4">Logout</font></a>
