Fixed some spelling errors.

--- a/views/charge.erb
+++ b/views/charge.erb
@@ -37,7 +37,7 @@ footer {
 <body>
 	<div id="/charge">
 		@@ charge
-  		<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+  		<h2>Thanks for paying!<strong>$5.00</strong>!</h2>
 	</div>
 </body>
 
