--- a/views/plaid.erb
+++ b/views/plaid.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Plaid Quickstart Example</title>
+<title>Link your accounts with Plaid!</title>
 <link rel="stylesheet" href="https://threads.plaid.com/threads.css">
 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -221,7 +221,7 @@ Hide things
     <div class="grid">
       <div class="grid__column grid__column--is-twelve-columns">
         <div id="banner" class="everpresent-content">
-          <h1 class="everpresent-content__heading">Plaid Quickstart</h1>
+          <h1 class="everpresent-content__heading">Get Started</h1>
           <p id="intro" class="everpresent-content__subheading">
             An example application that outlines an end-to-end integration with Plaid
           </p>
