--- a/views/upgrade.erb
+++ b/views/upgrade.erb
@@ -37,7 +37,7 @@ footer {
 
 <div class="container, text-center">
 <h1><strong>Upgrade</strong></h1>
-<p>Looking to upgrade? Their are alot of great benefits when upgrading to Master Tracker Pro!</p>
+<p>Looking to upgrade? There are alot of great benefits when upgrading to Master Tracker Pro!</p>
 
   <form action="/charge" method="post" class="payment, text-center">
     <article>
