--- a/views/account.erb
+++ b/views/account.erb
@@ -7,7 +7,241 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- This helps for the navbar-->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+<style type="text/css">
+    body {
+    background: #ffffff;
+    padding-top: 20rem;
+  }
+
+  .main {
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 80px 40px;
+  }
+
+
+  /*
+
+  Content at the top of the view
+
+  */
+  .everpresent-content {
+    border-bottom-width: 1px;
+    border-bottom-color: #E3E9EF;
+    border-bottom-style: solid;
+    margin-bottom: 16px;
+    padding-bottom: 16px;
+  }
+
+  .everpresent-content__heading {
+    margin-bottom: 16px;
+  }
+
+  .everpresent-content__subheading {
+    font-size: 24px;
+    font-weight: 300;
+    color: #527084;
+    line-height: 32px;
+    margin-bottom: 0;
+  }
+
+  /*
+
+  Item overview
+
+  */
+
+  .item-overview {
+    padding-bottom: 16px;
+  }
+
+  .item-overview__column {
+    width: 50%;
+    float: left;
+  }
+
+  .item-overview__column:nth-child(1) {
+    padding-right: 8px;
+  }
+
+  .item-overview__column:nth-child(2) {
+    padding-left: 8px;
+  }
+
+  .item-overview__heading {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin-bottom: 0;
+  }
+
+  .item-overview__id {
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+  }
+
+  /*
+
+  One off tweaks to the layout for tables
+
+  */
+
+  .response-row {
+  }
+
+  .response-row--is-identity td {
+    width: 25%;
+    display: inline-block;
+    overflow-wrap: break-word;
+    vertical-align: top;
+  }
+
+  /*
+
+  Display content inside of box
+
+  */
+
+  .box {
+    border-radius: 4px;
+    border-width: 1px;
+    border-color: #E3E9EF;
+    border-style: solid;
+    border-radius: 4px;
+    margin-bottom: 24px;
+    overflow: hidden;
+    box-shadow: 0 1px 2px rgba(3,49,86,0.2);
+  }
+
+  .box__heading {
+    padding: 16px 24px;
+    border-bottom-width: 1px;
+    border-bottom-color: #E3E9EF;
+    border-bottom-style: solid;
+    background-color: #FAFCFD;
+    margin-bottom: 0;
+  }
+
+
+  /*
+
+  Item row
+
+  */
+  .item-data-row {
+    border-bottom-width: 1px;
+    border-bottom-color: #E3E9EF;
+    border-bottom-style: solid;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .item-data-row:after {
+    clear: both;
+    content: '';
+    display: table;
+  }
+
+  .item-data-row:last-child {
+    margin-bottom: 0;
+    border-bottom: 0;
+  }
+
+  .item-data-row__request-type {
+    background-color
+    font-size: 12px;
+    color: #02B1F8;
+    letter-spacing: 0;
+    background: #D9F3FE;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 4px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    font-size: 14px;
+  }
+
+  .item-data-row__endpoint {
+    font-family: "monaco", courier;
+    font-size: 14px;
+    line-height: 32px;
+    display: inline-block;
+  }
+
+  .item-data-row__nicename {
+    font-size: 16px;
+    line-height: 32px;
+    display: inline-block;
+    font-weight: 500;
+    color: #033156;
+  }
+
+
+  .item-data-row__left {
+    width: 13%;
+    float: left;
+  }
+
+  .item-data-row__center {
+    width: 62%;
+    float: left;
+    padding-left: 16px;
+  }
+
+  .item-data-row__right {
+    width: 25%;
+    float: left;
+  }
+
+  /*
+
+  Hide things
+
+  */
+
+  #app {
+    display: none;
+  }
+
+  #steps {
+    display: none;
+  }
+  footer.footer .social-link {
+  display: block;
+  height: 4rem;
+  width: 4rem;
+  line-height: 4.3rem;
+  font-size: 1.5rem;
+  background-color: #1D809F;
+  -webkit-transition: background-color 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out;
+  -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+footer.footer .social-link:hover {
+  background-color: #155d74;
+  text-decoration: none;
+}
+
+footer {
+  background-color: #000000;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+</style>
+<!-- Body of account site-->
 <body>
   <main class="main">
     <div class="grid">
@@ -185,7 +419,33 @@
         </div>
       </div>
     </div>
+
+   
   </main>
+
+   <!-- Footer -->
+    <footer class="footer text-center">
+      <div class="container">
+        <ul class="list-inline mb-5">
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#">
+              <i href="#"class="fa fa-facebook"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white mr-3" href="#">
+              <i href="#" class="fa fa-twitter"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link rounded-circle text-white" href="#">
+              <i href="#" class="fa fa-github"></i>
+            </a>
+          </li>
+        </ul>
+        <p class="text-muted small mb-0"><font size="4">Copyright &copy; Your Website 2018</font></p>
+      </div>
+    </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
